<resources>
    <string name="app_name">Foodonet</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_sql_loader_result">SqlLoaderResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_new_fcpublication">AddNewFCPublicationActivity</string>
    <string name="no_date_set_string">0000–00–00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="test_btn_text">TEST</string>
    <string name="pub_det_on_the_way_to_take">On the way</string>
    <string name="pub_det_metr_from_you">meters from you</string>
    <string name="pub_det_calculating_distance">Calculating distance</string>
    <string name="pub_det_cant_get_distance">Distance unknown</string>
    <string name="pub_det_reports_for_pub">User reports</string>
    <string name="title_activity_my_publication_details">MyPublicationDetailsActivity</string>
    <string name="participants_report">Report on participants</string>
    <string name="going_to_collect">persons are going to collect</string>
    <string name="cancel_publication">cancel publication</string>
    <string name="cancel_publication_question">Really cancel this publication?</string>
    <string name="pub_det_uimessage_successfully_registered_to_pub">Successfully registered to publication</string>
    <string name="hashtag">#FooDoNet</string>
    <string name="ttl_item_your_new_share">New sharing</string>
    <string name="share_with">Share with</string>
    <string name="file_name_part_just_shot">justShot</string>
    <string name="validation_cant_get_my_location">Cann\'t find my location</string>
    <string name="validation_title_empty">Title cannot be empty</string>
    <string name="validation_title_too_long">Title is too long, maximum: {0} characters</string>
    <string name="validation_address_empty">Address required</string>
    <string name="validation_must_choose_group">Please choose group to share with</string>
    <string name="btn_ok_add_pub">בחר</string>
    <string name="btn_cancel_add_pub">בטל</string>
    <string name="address_dialog_btn_ok">Ok</string>
    <string name="address_dialog_btn_cancel">Cancel</string>
    <string name="validation_location_empty">לצורך יצירת שיתוף יש לציין את מיקומו‫.‬ ניתן ללהקליד כתובת‫,‬ לבחור מההיסטוריה או להשתמש במיקום הנוכחי‫.‬</string>
    <string name="progress_waiting_for_location">Current location</string>
    <string name="error_cant_perform_this_action_without_internet">לא ניתן לבצע {0} ללא חיבור לאינטרנט</string>
    <string name="progress_loading">Loading...</string>
    <string name="progress_load">Loading...</string>
    <string name="progress_first_load">First load...</string>
    <string name="pub_det_km_from_you"> km away</string>
    <string name="filter_less_regs_btn_text">Active</string>
    <string name="side_menu_activity_center_title">Activity Center</string>
    <string name="add_pic_string">Add a picture</string>
    <string name="et_subtitle_add_edit_pub">Additional details</string>
    <string name="notif_new_registered_user">Another user is en route to pickup:</string>
    <string name="btn_take_photo">Camera</string>
    <string name="btn_cancel">Cancel</string>
    <string name="no_internet_connection_available_error_message">Communication Issue</string>
    <string name="get_current_location_checkbox_text">Current location</string>
    <string name="pub_det_menu_item_delete">Delete</string>
    <string name="pub_det_menu_item_edit">Edit</string>
    <string name="side_menu_going_to_take_part">en route</string>
    <string name="filter_ending_btn_text">Ends</string>
    <string name="title_end_pub_details">Ends:</string>
    <string name="publication_details_title">Add more details</string>
    <string name="address_string">Event location</string>
    <string name="title_all_publications">Events Near You</string>
    <string name="pub_det_sms_default_text">I want to pickup </string>
    <string name="collector_details_phone_incorrect">It seems the phone number is incorrect. Please check you have typed it correctly.</string>
    <string name="btn_chose_from_library">Library</string>
    <string name="side_menu_my_active_pubs_part">My Shares</string>
    <string name="collector_dialog_name_et">Name</string>
    <string name="pub_det_no_reports_for_pub">No reports</string>
    <string name="report_dialog_found_nothing_btn">Nothing Left</string>
    <string name="filter_not_active_btn_text">Off Air</string>
    <string name="filter_active_btn_text">On Air</string>
    <string name="collector_dialog_phone_et">Phone number</string>
    <string name="pickup_btn">Pickup</string>
    <string name="end_string">Pickup ends:</string>
    <string name="pickup">Pickup Food</string>
    <string name="start_string">Pickup starts:</string>
    <string name="filter_newest_btn_text">Recent</string>
    <string name="collector_dialog_sign_btn">Register</string>
    <string name="collector_dialog_sign_title">Register for Pickup</string>
    <string name="action_take_off_air">Remove Event</string>
    <string name="report_dialog_report_btn">Report</string>
    <string name="dialog_pub_reports_title">Reports</string>
    <string name="pub_list_search_hint">Search</string>
    <string name="feedback_btn_ok">Send</string>
    <string name="share_btn">Share</string>
    <string name="publish">Share Food</string>
    <string name="feedback_dialog_title">Share your thoughts or anything else</string>
    <string name="title_begin_pub_details">Started:</string>
    <string name="pub_det_menu_item_deactivate">Stop Event</string>
    <string name="report_dialog_collected_part_btn">There’s More to Pickup</string>
    <string name="report_dialog_whole_btn_text">There’s more to pickup</string>
    <string name="report_dialog_collected_all_btn">Took All</string>
    <string name="report_dialog_half_btn_text">Took all</string>
    <string name="welcome_string">Welcome</string>
    <string name="enter_title_string">What are you sharing?</string>
    <string name="add_phone_number_string">What\'s your phone number?</string>
    <string name="welcome_reg_number_string">WELCOME TO FOODONET</string>
    <string name="btn_start_sharing_string">Start Sharing</string>
    <string name="last_step_string">LAST STEP TO START</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_in_title">Sharing food changing society</string>
    <string name="sign_in_subtitle">Ready to get started?</string>
    <string name="sign_in_footer">Continue without Registration</string>
    <string name="sign_in_with_title">Sign in with</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register_phone">RegisterPhoneActivity</string>
    <string name="dialog_title_please_register">Please register</string>
    <string name="dialog_message_please_register">Only registered users can use this feature</string>
    <string name="dialog_button_register_now">Register now</string>
    <string name="dialog_button_no_thanks">No, thanks</string>
    <string name="validation_phone_number_empty">Phone number cannot be empty</string>
    <string name="validation_phone_number_invalid">You entered invalid number</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="failed_to_login_try_later">Failed to login, please try later</string>
    <string name="group_title">Group</string>
    <string name="group_name_hint">Group name</string>
    <string name="group_add_members">Add members</string>
    <string name="contacts_title">Contacts</string>
    <string name="loading_contacts">Loading contacts</string>
    <string name="saving_group">Saving group</string>
    <string name="loading_group">Loading group</string>
    <string name="new_group_dialog_title">Enter new group name:</string>
    <string name="new_group_dialog_create_button">Create</string>
    <string name="group_admin_subtitle">Admin</string>
    <string name="button_text_leave">Leave</string>
    <string name="button_text_group">group</string>
    <string name="progress_delete_member">Removing group member</string>
    <string name="progress_leave_group">Leaving group</string>
    <string name="confirmAction">Sure?</string>
    <string name="confirmExit">You\'re sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_groups_list">GroupsListActivity</string>
    <string name="title_activity_new_and_existing_group">NewAndExistingGroupActivity</string>
    <string name="title_activity_select_contacts_for_group">SelectContactsForGroupActivity</string>
    <string name="title_activity_add_edit_publication">AddEditPublicationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_avatar_file_name">avatar.jpeg</string>
    <string name="publication_picture_file_name_format">{0}.{1}.jpg</string>
    <string name="new_israeli_shekel_sign">₪</string>
    <string name="title_activity_select_group_for_publication">aaa</string>
    <string name="progress_saving_publication">Saving publication</string>
    <string name="address_format_for_list">{0} ({1})</string>
    <string name="users_joined_format_for_list">{0} users joined</string>
    <string name="filter_closest_btn_text">Closest</string>
    <string name="filter_new_btn_text">Recent</string>
    <string name="filter_all_btn_text">Active</string>
    <string name="title_activity_my_publications">MyPublicationsActivity</string>
    <string name="all_shares_toolbar_title">All shares</string>
    <string name="toolbar_title_map">Sharings on map</string>
    <string name="filter_all_my_pubs">Ends</string>
    <string name="filter_active_my_pubs">On Air</string>
    <string name="filter_ended_my_pubs">Off Air</string>
    <string name="new_pub_waiting_for_save_on_server">Saving publications to server, please wait</string>
    <string name="my_shares_toolbar_title">My shares</string>
    <string name="progress_loading_publication">Loading publication</string>
    <string name="ttl_item_your_sh_menu">Your sharings</string>
    <string name="ttl_item_sub_menu">Subscription</string>
    <string name="ttl_item_groups_menu">Groups</string>
    <string name="ttl_item_notifications">Notifications</string>
    <string name="ttl_item_settings_menu">Settings</string>
    <string name="ttl_item_contact_menu">Contact us</string>
    <string name="ttl_item_terms_menu">About</string>
    <string name="public_share_group_name">Public</string>
    <string name="loading_groups">Loading groups</string>
    <string name="title_activity_settings_select">SettingsSelectActivity</string>
    <string name="share_with_format">Share with: {0}</string>
    <string name="hint_price_free">Price: Free</string>
    <string name="hint_price">Price:</string>
    <string name="profile_settings_button_text">Profile settings</string>
    <string name="notification_settings_button_text">Notifications</string>
    <string name="logout_button_text">Log out</string>
    <string name="title_activity_profile_view_and_edit">profile_view_and_edit</string>
    <string name="settings_ask_if_sure_to_logout">Are you\'re sure you want to logout?</string>
    <string name="progress_logout">Logging out</string>
    <string name="notifications_settings_set_distance">Set the distance</string>
    <string name="notifications_settings_radius">Notifications Radius:</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_stop_event">Stop Event</string>
    <string name="menu_item_delete">Delete</string>
    <string name="report_has_more">Has more to pickup</string>
    <string name="report_took_all">Took all</string>
    <string name="report_nothing_found">Found nothing there</string>
    <string name="report_dialog_please_rate_it">Please rate it:</string>
</resources>