<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="400dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tv_report_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:theme="@style/Theme.AppCompat.Light"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4">

        <RadioGroup
            android:id="@+id/rg_report_dialog_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_report_dialog_has_more"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/report_has_more"
                android:theme="@style/MyRadioButton"
                android:tag="1"/>

            <RadioButton
                android:id="@+id/rb_report_dialog_took_all"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/report_took_all"
                android:theme="@style/MyRadioButton"
                android:layout_marginTop="12dp"
                android:tag="3"/>

            <RadioButton
                android:id="@+id/rb_report_dialog_nothing_found"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/report_nothing_found"
                android:theme="@style/MyRadioButton"
                android:layout_marginTop="12dp"
                android:tag="5"/>

        </RadioGroup>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/report_dialog_please_rate_it" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2">

        <RatingBar
            android:id="@+id/rating_bar_report_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:numStars="5"
            android:rating="5"
            android:stepSize="1"
            android:theme="@style/RatingBar"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_report_result_no"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_button_no_thanks" />

        <Button
            android:id="@+id/btn_report_result_yes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/report_dialog_report_btn" />
    </LinearLayout>

</LinearLayout>