<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/new_group_dialog_title"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="?attr/actionBarSize">
        <EditText
            android:id="@+id/et_new_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_new_group_ok"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/new_group_dialog_create_button"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/btn_new_group_cancel"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/address_dialog_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</LinearLayout>