<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="upp.foodonet.material.SettingsSelectActivity"
    tools:showIn="@layout/activity_settings_select"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/btn_profile_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/profile_settings_button_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:drawableLeft="@drawable/user_settings_icon"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_notifications_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/notification_settings_button_text"
        android:layout_below="@+id/btn_profile_settings"
        android:drawableLeft="@drawable/bell_notifications"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logout_button_text"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginBottom="?attr/actionBarSize"/>

</RelativeLayout>
