<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_new_existing_group"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/group_title"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

<!--
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

-->
        <include layout="@layout/content_new_existing_group" />
<!--
    </android.support.v7.widget.RecyclerView>
-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/save_icon_white"
        app:backgroundTint="@color/plus_button_red"/>

    <FrameLayout
        android:id="@+id/fl_button_leave_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="50dp">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:color/transparent"
            app:backgroundTint="@color/plus_button_red"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_text_leave"
                android:elevation="16dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_text_group"
                android:elevation="16dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>
